
* v0.19 → v0.20 (unreleased):

** New Features

- show-result: Improve behaviour with build failures.
- show-result: Support nobuild type modules.
- show-result: Support reading compressed log files (gzip, bzip2, lzma).
- show-result: Add support for viewing output in a pager.
- download-*: Use silent git execution as well.
- download-*: Check out main development branch after clone explicitly.
- Allow disabling user-configuration directories.

** Bugfixes

- Fix main branch with a number of zephyr modules.
- Do not throw an exception if a build process emits invalid utf-8.

** Diffstat:

  TBD


* v0.18 → v0.19 (released 2023-02-16):

** New Features

- Add nanopb module to sources.

** Bugfixes

- Fix diagnostic when module revision cannot be checked out.

** Diffstat:

    data/sources.yaml  | 2 ++
    makemehappy/cut.py | 6 +++---
    2 files changed, 5 insertions(+), 3 deletions(-)


* v0.17 → v0.18 (released 2023-02-05):

** New Features

- Add dependency tree analysis
- Add module version and module deprecation
- Add '!preserve' to work in --revision
- Add '!latest' and '!latest:PATTERN' to refer to latest tag in --revision

** Bugfixes

- Fix behaviour of --config and --source for files in working directory

** Miscellaneous

- Make git command calls more quiet
- Dependency resolution is now a phase for --show-phases

** Diffstat:

    ROADMAP.org              | 124 +++++++---
    _makemehappy             |   1 +
    data/config.yaml         |  15 ++
    makemehappy/cut.py       | 495 ++++++++++++++++++++++++++++++++++++++-
    makemehappy/utilities.py |  19 ++
    makemehappy/version.py   | 117 +++++++++
    makemehappy/yamlstack.py |  13 +
    mmh.in                   |  96 ++++++--
    8 files changed, 818 insertions(+), 62 deletions(-)


* v0.16 → v0.17 (released 2023-01-22):

** New Features

- New ‘revision-overrides’ sub-command.
- New ‘focus-instance’ sub-command.
- New ‘nobuild’ module-type.

** Miscellaneous
