@@ -140,7 +140,14 @@ _makemehappy-download-source() {
         print "Download sources for specified sources"
         return
     fi
-    __makemehappy-modules
+
+    local curcontext=$curcontext state line ret=1
+
+    _arguments -C -s -w : \
+               '*::: :__makemehappy-modules' \
+               '(-h --help)'{-h,--help}'[display help message]' \
+               '(-r --release)'{-r,--release}'[use latest release tag after cloning]' \
+        && ret=0
 }
 
 _makemehappy-download-sources() {
